# amms

./: Cargo.toml  README.md
crates/mmss-core/: Cargo.toml
crates/mmss-core/src/export/: arrow.rs
crates/mmss-eqgft/: Cargo.toml
crates/mmss-eqgft/src/: lib.rs
examples/: dashboard.rs  generate_data.rs
src/core/: emergence_logic.rs  geometric_metrics.rs  semantic_task_processor.rs  types.rs
src/routes/: llm.rs  mod.rs  rules.rs  visualization.rs
src/web/: app.css  app.js  index.html
tools/vis/: EQGFT-core-renderer.py  eqgft_v2_2.py  requirements.txt  server.py
